intial mobile changes

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <section class="title">
   <div class="row">
     <div class="col-md-3 ps-3">
-      <img src="./images/map_image.png" alt="illustration" class="title-img img-fluid pt-5">
+      <img src="./images/map_image.png" alt="illustration" class="title-img img-fluid pt-5" id="map_illustration">
     </div>
     <div class="col-md-9 title-content">
       <h1>Tours & Travels</h1>
@@ -355,7 +355,7 @@
           <div class="col p-4 d-flex flex-column position-static">
             <strong class="d-inline-block mb-2 text-primary">Tirupathi VIP Package</strong>
             <p class="card-text mb-auto">Balaji darshan, and padmavathi temple sight seeing, Room for Freshening up &amp; 2 Laddu Prasadam, V.I.P Darshan ticket, Breakfast &amp; Lunch All including.&amp; </p>
-            <a href="#" class="stretched-link">Continue reading</a>
+            <a href="./services.html" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
             <img src="./images/tirumala.webp" width="200" height="250" role="img" style="object-fit:cover;" aria-label="Placeholder: Thumbnail" focusable="false" alt="Tirumala-pic">
@@ -369,7 +369,7 @@
             <strong class="d-inline-block mb-2 text-primary">TOUR 1 : MYSORE - OOTY : 1 Night - 2 Days</strong>
             <p class="card-text mb-auto"><Strong>Day 1 :</Strong>SriRangapatna - Sri Ranganatha Swamy Temple, Tippu's Palace, Gumbaz.
               Mysore - Chamundi Hills, Maharaja Palace, St. Philomina Church & BrindavanGarden (with musical fountain)   (Night Stay)</p>
-            <a href="#" class="stretched-link">Continue reading</a>
+            <a href="./services.html" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
             <img src="./images/OOTYwebp.webp" width="200" height="250" role="img" style="object-fit:cover;" aria-label="Placeholder: Thumbnail" focusable="false" alt="Tirumala-pic">
@@ -382,7 +382,7 @@
           <div class="col p-4 d-flex flex-column position-static">
             <strong class="d-inline-block mb-2 text-primary">TOUR 2 : TIRUPATI - GANDIKOTA : 1 Night</strong>
             <p class="card-text mb-auto">Tirumala darshan is a spiritual pilgrimage to the sacred hill of Tirumala, known for its iconic Venkateswara Temple. Devotees seek blessings, climb stairs, and wait in long queues for a glimpse of the deity. </p>
-            <a href="#" class="stretched-link">Continue reading</a>
+            <a href="./services.html" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
             <img src="./images/Gandikota.jpg" width="200" height="250" role="img" style="object-fit:cover;" aria-label="Placeholder: Thumbnail" focusable="false" alt="Tirumala-pic">
@@ -395,7 +395,7 @@
           <div class="col p-4 d-flex flex-column position-static">
             <strong class="d-inline-block mb-2 text-primary">TOUR 2 : TIRUPATI - THALAKONA : 1 Night</strong>
             <p class="card-text mb-auto">Talakona is a resort with waterfalls, dense forests and wildlife. The area was declared a biosphere reserve in 1989 due to the presence of rich variety of flora</p>
-            <a href="#" class="stretched-link">Continue reading</a>
+            <a href="./services.html" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
             <img src="./images/talakona.jpg" width="200" height="250" role="img" style="object-fit:cover;" aria-label="Placeholder: Thumbnail" focusable="false" alt="Tirumala-pic">
@@ -408,7 +408,7 @@
           <div class="col p-4 d-flex flex-column position-static">
             <strong class="d-inline-block mb-2 text-primary">TOUR 3 : TIRUPATI - NARAYANAVANAM : 1 Night</strong>
             <p class="card-text mb-auto">Narayanavanam is a census town in Tirupati district of the Indian state of Andhra Pradesh. It is the headquarters of Narayanavanam mandal in Sri Kalahasti revenue division. The town is known for Kalyana Venkateswara Temple.</p>
-            <a href="#" class="stretched-link">Continue reading</a>
+            <a href="./services.html" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
             <img src="./images/narayanavanam.jpg" width="200" height="250" role="img" style="object-fit:cover;" aria-label="Placeholder: Thumbnail" focusable="false" alt="Tirumala-pic">
