mobile response buttons

--- a/services.html
+++ b/services.html
@@ -119,7 +119,7 @@
 
 
   <div class="grey-bg container-fluid">
-    <section id="minimal-statistics" style="width: 70%; margin: auto;">
+    <section id="minimal-statistics" >
       <div class="row">
         <div class="col-12 text-center mt-5">
           <h4 class="m-3">Packages we offer</h4>
